# Blog-Web-APP

./: .env-example  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  db.sqlite3  manage.py  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.txt  search_system.md
.github/: FUNDING.yml
.github/workflows/: django.yml  lint.yml
apps/blog/: admin.py  choices.py  filters.py  forms.py  managers.py  models.py  sitemaps.py  tests.py  urls.py  utils.py  views.py
apps/shared/: admin.py  apps.py  mixins.py  models.py  utils.py  views.py
apps/users/: admin.py  apps.py  authentication.py  forms.py  middleware.py  models.py  services.py  signals.py  tests.py  urls.py  utils.py  views.py
blog/: views.py
compressor/CACHE/: manifest.json
config/: settings.py  urls.py
core/: asgi.py  settings.py  settings_example.py  urls.py  wsgi.py
core/config/: __init__.py  apps.py  jwt.py  rest_framework.py  unfold.py  unfold_navigation.py
core/settings/: base.py  development.py  production.py
docs/: generate-rsa-keys-for-simple-jwt.md  index.md  installation.md
security/: private_key.pem
security_settings/: public_key.pem
templates/: base.html  htmx_blog.html  including_blog.html
templates/auth/: login.html  logout.html  register.html
templates/blog/: about.html  base.html  contacts.html  home.html  login.html  logout.html  post_confirm_delete.html  post_create.html  post_detail.html  post_update.html  profile.html  register.html  settings.html  user_posts.html
templates/components/: footers.html  headers.html  messages.html  (+2 more)
(+61 files in other folders)
